@@ -12,8 +12,9 @@ if (TYPO3_MODE == 'BE' && !(TYPO3_REQUESTTYPE & TYPO3_REQUESTTYPE_INSTALL)) {
 	 */
 	// GDlib is a requirement for the Font Maker module
 	if ($GLOBALS['TYPO3_CONF_VARS']['GFX']['gdlib']) {
-		//SJBR\SrFreecap\Domain\Model\Font uses declare(encoding='ISO-8859-2') which requires:
-		ini_set('zend.multibyte', 'On');
+		// SJBR\SrFreecap\Domain\Model\Font uses declare(encoding='ISO-8859-2') which, since PHP 5.4 requires zend.multibyte to be set to On'.
+		// However, this has to be set in php.ini, .htaccess, httpd.conf or .user.ini, because the setting zend.multibyte is of type PHP_INI_PERDIR
+		// See http://php.net/manual/en/configuration.changes.modes.php
 		\TYPO3\CMS\Extbase\Utility\ExtensionUtility::registerModule(
 			'SJBR.' . $_EXTKEY,
 			// Make module a submodule of 'tools'
